Spring reactive web

--- a/reactive-producer-consumer/reactive-web-consumer/src/main/resources/application.properties
+++ b/reactive-producer-consumer/reactive-web-consumer/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 logging.level.com.mynotes=DEBUG
 logging.level.org.springframework.web=TRACE
 spring.http.log-request-details=true
