--- a/reactive-producer-consumer/reactive-web-consumer/src/main/resources/application.properties
+++ b/reactive-producer-consumer/reactive-web-consumer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8081
 logging.level.com.mynotes=DEBUG
-logging.level.org.springframework.web=TRACE
+logging.level.org.springframework=TRACE
 spring.http.log-request-details=true
